Fix overlay in manager and fix wrong margin

--- a/public/assets/src/opennemas-webarch/css/layout/_content.css
+++ b/public/assets/src/opennemas-webarch/css/layout/_content.css
@@ -72,6 +72,7 @@
 
 .table-wrapper {
   overflow-x: auto;
+  position: relative;
 }
 
 @media (max-width: 991px) and (min-width: 768px){
