--- a/public/assets/src/opennemas-webarch/less/helpers/_utils.less
+++ b/public/assets/src/opennemas-webarch/less/helpers/_utils.less
@@ -50,7 +50,7 @@
 }
 
 .m-r-10 {
-  margin-top: 10px !important;
+  margin-right: 10px !important;
 }
 
 .m-b-15 {
